Team and player dto finished